[dp-271] feat: implement API to create new lottery product #done